# lfu_cache

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  cache.hpp  caches.cpp  caches.hpp  main.cpp
.github/workflows/: workflow.yml
include/: cache.hpp
src/: belady.cpp  lfu.cpp  main.cpp  test.cpp  testgen.cpp
test/belady/: 009.test  10.test  11.test  12.test  13.test  14.test  2.test  3.test  4.test  5.test  6.test  7.test  8.test  9.test
test/lfu/: 1.test  2.test  3.test  4.test  5.test  6.test  7.test
test/not_fall/: 007.test  010.test  011.test  012.test  013.test  016.test  017.test  020.test  022.test  3.test  4.test  7.test
test/stress/: 006.test  008.test  009.test  014.test  015.test  018.test  019.test  021.test  1.test  2.test
